# wgi

./: Cargo.toml  LICENSE  README.md  lambda.js
.github/workflows/: rust.yml
examples/hello_world/: .gitignore  Makefile  hello_world.c
examples/js/: .gitignore  Makefile  bootstrap.js  cgi.js  environ.js  fib.js  hello.js  js.c  jsl.c  lambda.h  main.c  quickjs-lambda.c  quickjs-lambda.h  quickjs-wasi.c  quickjs-wasi.h  utils.js
examples/js/quickjs/: quickjs.c
examples/lambda/: .gitignore  Makefile  lambda.c  lambda.h
examples/markdown/: Cargo.toml
examples/markdown/src/: lib.rs
src/: cgi.rs  lambda.rs  main.rs  wasm.rs
wgi-bin/js/: cgi.js  eval.js  fib.js  utils.js
