[package]
name = "wgi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
axum = { version = "0.5.1", features = ["headers", "multipart"] }
base64 = "0.13.0"
hyper = "0.14.18"
mime = "0.3.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
tokio = { version = "1.24.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["trace"] }
tracing = "0.1"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }
wasmer = "2.2.3"
wasmer-cache = "2.2.3"
wasmer-compiler-cranelift = "2.2.3"
wasmer-engine-universal = "2.2.3"
wasmer-vfs = "2.2.3"
wasmer-wasi = "2.2.3"